Fixed icon placement and size on mobile

--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -136,7 +136,7 @@ form {
   transform: scale(1);
   transition: transform $cubic-bezier-transition;
 
-  .temp-icon {
+  #temp-icon {
     font-size: 1.8rem;
     vertical-align: text-top;
   }
@@ -224,7 +224,22 @@ form {
     padding: 0.1rem 0.5rem 0.1rem 0.5rem;
     margin: 0.4rem;
     width: 70vw;
-    border-radius: 6px;
+
+    #temp-icon {
+      font-size: 1.2rem;
+    }
+
+    #weather-icon {
+      font-size: 5rem;
+    }
+
+    #wind-icon {
+      font-size: 1.2rem;
+    }
+
+    #map-icon {
+      font-size: 1.2rem;
+    }
   }
   .credits a {
     font-size: 0.8rem;
@@ -241,6 +256,23 @@ form {
   }
   .helper-bg {
     padding: 0.1rem 0.4rem 0.1rem 0.4rem;
+
+    #temp-icon {
+      font-size: 1rem;
+      vertical-align: baseline;
+    }
+
+    #weather-icon {
+      font-size: 4.5rem;
+    }
+
+    #wind-icon {
+      font-size: 1rem;
+    }
+
+    #map-icon {
+      font-size: 1rem;
+    }
   }
   .button,
   form input {
